Updated to include docker setup.

--- a/devfornet.Web/Components/Layout/MainLayout.razor
+++ b/devfornet.Web/Components/Layout/MainLayout.razor
@@ -19,7 +19,7 @@
     <FluentFooter>
         <small><a href="mailto:mwmccabe@devfor.net" target="_blank">Contact</a></small>
         <div style="padding-left: 8px;" />
-        <small><a href="https://github.com" target="_blank">GitHub</a></small>        
+        <small><a href="https://github.com/mccabe93/www.devfor.net" target="_blank">GitHub</a></small>
         <FluentSpacer />
         <small>Free and open-source news aggregator for .NET developers</small>
         <FluentSpacer />
