--- a/devfornet.Web/Components/Layout/NavMenu.razor
+++ b/devfornet.Web/Components/Layout/NavMenu.razor
@@ -5,7 +5,7 @@
     <nav class="sitenav" aria-labelledby="main-menu">
         <FluentNavMenu Id="main-menu" Title="Navigation menu" Expanded="false">
             <FluentNavLink Href="https://discord.gg/JrAg42dGcS" Target="_blank" Icon="@(new Size20.PeopleCommunity())" IconColor="Color.Accent" Tooltip="devfor.net discord" />
-            <FluentNavLink Href="https://github.com" Target="_blank" Icon="@(new Size20.Code())" IconColor="Color.Accent" Tooltip="devfor.net code" />
+            <FluentNavLink Href="https://github.com/mccabe93/www.devfor.net" Target="_blank" Icon="@(new Size20.Code())" IconColor="Color.Accent" Tooltip="devfor.net code" />
         </FluentNavMenu>
     </nav>
 </div>
