A few minor tweaks for deployment. Added a link for Umami analytics.

--- a/devfornet.Web/Components/App.razor
+++ b/devfornet.Web/Components/App.razor
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
+    <!-- Umami analytics -->
+    <script defer src="https://analytics.devfor.net/script.js" data-website-id="998180e1-9b7b-4850-b46e-870fd25d44e9"></script>
     <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]" />
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <link rel="stylesheet" href="@Assets["devfornet.Web.styles.css"]" />
